# FastApiAsync

./: .env.example  .flake8  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: checks.yml
src/apps/accounts/: exceptions.py
src/apps/accounts/api/v1/routes/: auth.py  users.py
src/apps/accounts/api/v1/schemas/: users.py
src/apps/accounts/services/: auth.py  users.py
src/database/: base.py  base_class.py  session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 39f30d6f4bf4_.py  a81ce728be3e_.py
src/database/models/: mixins.py  users.py
src/settings/: config.py  routes.py
